[project]
name = "cubism-mcp"
version = "1.0.0"
description = "MCP server for Live2D Cubism Editor external API integration"
requires-python = ">=3.10,<=3.14"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "nest-asyncio>=1.5.0",
]

[project.scripts]
cubism-mcp = "cubism_mcp_server:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
